--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="title">Spotify - Your favourite music is here</title>
     <link rel="stylesheet" href="style.css" type="text/css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body>
-    <section id="home">
+    <!-- <section id="home">
     <nav>
         <ul>
             <li class="brand"><img class="btn" src="images/logo.png" alt="Spotify"> Spotify</li>
@@ -44,17 +46,56 @@
                     <i class="fa-solid fa-xmark close-icon"></i>
                     <i class="fa-solid fa-microphone voice-search" id="voice-search"></i>
                 </div>
-                <div class="search_result">
+                <div class="search_result"> -->
                     <!--<a href="#" class="card">
                         <img src="covers/1.jpg" alt="">
                         <div class="content">Your Eyes</div>
                     </a>-->
-                </div>
+                <!-- </div>
             </div>
         </ul>
     </nav>
-    </section>
-    <div class="container">
+    </section> -->
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="images/logo.png" alt="Spotify" class="rounded-pill logo"> Spotify
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link link" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link link" href="#">About</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle link" href="#" role="button" data-bs-toggle="dropdown">Languages</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Telugu</a></li>
+                  <li><a class="dropdown-item" href="#">Hindi</a></li>
+                  <li><a class="dropdown-item" href="#">English</a></li>
+                  <li><a class="dropdown-item" href="#">Tamil</a></li>
+                </ul>
+              </li> 
+              <div class="d-flex">
+              <div class="input-group ms-auto p-2">
+                <div id="navbar-search-autocomplete" class="form-outline">
+                  <input type="search" placeholder="Search Your Music..." id="form1" class="form-control" />
+                </div>
+                <button type="button" class="btn btn-primary" style="height: 41px;">
+                  <i class="fas fa-search"></i>
+                </button>
+              </div>
+              </div>
+            </ul>
+          </div>
+        </div>
+    </nav>
+    <div class="container mt-8">
         <div class="songList">
             <h1>Best of NCS - No Copyright Sounds</h1>
             <div class="songItemContainer"></div>
